# tokenizers

bindings/python/py_src/tokenizers/: __init__.py
bindings/python/src/: models.rs  tokenizer.rs  trainers.rs
tokenizers/: Cargo.toml  Makefile  README.md
tokenizers/benches/: bert_benchmark.rs  bpe_benchmark.rs
tokenizers/benches/common/: mod.rs
tokenizers/src/: lib.rs
tokenizers/src/decoders/: mod.rs
tokenizers/src/models/: mod.rs
tokenizers/src/models/bpe/: mod.rs  trainer.rs  word.rs
tokenizers/src/models/unigram/: mod.rs  model.rs  trainer.rs
tokenizers/src/models/wordlevel/: mod.rs  trainer.rs
tokenizers/src/models/wordpiece/: mod.rs
tokenizers/src/normalizers/: mod.rs
tokenizers/src/pre_tokenizers/: mod.rs
tokenizers/src/processors/: mod.rs
tokenizers/src/tokenizer/: added_vocabulary.rs  encoding.rs  mod.rs  normalizer.rs  pattern.rs
tokenizers/src/utils/: mod.rs  parallelism.rs
tokenizers/tests/: added_tokens.rs  documentation.rs  offsets.rs  serialization.rs  training.rs  unigram.rs
tokenizers/tests/common/: mod.rs
