[package]
authors = ["Anthony MOI <m.anthony.moi@gmail.com>"]
edition = "2018"
name = "tokenizers"
version = "0.10.1"
homepage = "https://github.com/huggingface/tokenizers"
repository = "https://github.com/huggingface/tokenizers"
documentation = "https://docs.rs/tokenizers/"
license = "Apache-2.0"
keywords = ["tokenizer", "NLP", "huggingface", "BPE", "WordPiece"]
readme = "./README.md"
description = """
Provides an implementation of today's most used tokenizers,
with a focus on performances and versatility.
"""
exclude = [ "rust-toolchain", "target/*", "Cargo.lock", "benches/*.txt", "benches/*.json", "data/*" ]

[lib]
name = "tokenizers"
path = "src/lib.rs"
bench = false

[[bin]]
name = "cli"
path = "src/cli.rs"
bench = false
required-features = ["default"]

[[bench]]
name = "bpe_benchmark"
harness = false
required-features = ["default"]

[[bench]]
name = "bert_benchmark"
harness = false

[dependencies]
lazy_static = { version = "1.4", optional = true }
rand = { version = "0.7", optional = true }
onig = { version = "6.0", default-features = false, optional = true }
regex = "1.3"
regex-syntax = "0.6"
rayon = { version = "1.3", optional = true }
rayon-cond = { version = "*", git = "https://github.com/n1t0/rayon-cond", optional = true }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
clap = { version = "2.33", optional = true }
unicode-normalization-alignments = "0.1"
unicode_categories = "0.1"
unicode-segmentation = { version = "1.6", optional = true }
indicatif = {version = "0.15", optional = true}
itertools = { version = "0.9", optional = true }
log = "0.4"
esaxx-rs = { version = "0.1", optional = true }
derive_builder = { version = "0.9", optional = true }
spm_precompiled = { version = "0.1", optional = true }

[features]
default = [
    "progressbar",
    "lazy_static",
    "rand",
    "onig",
    "rayon",
    "rayon-cond",
    "clap",
    "unicode-segmentation",
    "itertools",
    "esaxx-rs",
    "derive_builder",
    "spm_precompiled",
]
progressbar = ["indicatif"]
bert = []

[dev-dependencies]
criterion = "0.3"
tempfile = "3.1"
assert_approx_eq = "1.1"
